--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "multer": "^1.3.0",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5",
-    "sqlite3": "^4.0.0"
+    "nodemon": "^1.17.5"
   }
 }
